--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
           <a
             href=""
             class="w-24 h-7 bg-pink-500 hover:cursor-pointer hover:scale-150 hover:bg-blue-700 duration-300"
-            >Home Page</a
+            >Library</a
           >
         </button>
         <button class="flex w-24 h-5">
           <a
             href=""
             class="w-24 h-7 bg-yellow-400 hover:cursor-pointer hover:scale-150 hover:bg-blue-700 duration-300"
-            >Home Page</a
+            >Top Hits</a
           >
         </button>
         <button class="flex w-24 h-5">
           <a
             href=""
             class="w-24 h-7 bg-red-600 hover:cursor-pointer hover:scale-150 hover:bg-blue-700 duration-300"
-            >Home Page</a
+            >Search</a
           >
         </button>
       </div>
