--- a/main.html
+++ b/main.html
@@ -217,9 +217,11 @@
       </div>
     </div>
     <footer
-      class="text-white w-full space-y-5 bg-yellow-600 flex justify-center h-full"
+      class="text-white w-full gap-2 py-5 bg-yellow-600 flex flex-col justify-center h-full items-center"
     >
-      @Produced by Mai Do Tien Dat
+      <h1>@Produced by Mai Do Tien Dat</h1>
+      <h2>School: SNAC</h2>
+      <h2>Date of Birth: 17/04/2012</h2>
     </footer>
   </body>
 </html>
