--- a/login.html
+++ b/login.html
@@ -37,12 +37,12 @@
           <button
             class="hover:cursor-pointer bg-red-700 hover:duration-1000 hover:bg-blue-700 rounded-3xl text-white"
           >
-            <a href="main.html"></a>
+            <a href="main.html">Corfirm</a>
           </button>
           <button
             class="hover:cursor-pointer bg-red-700 hover:duration-1000 hover:bg-blue-700 rounded-3xl text-white"
           >
-            <a href="login.html">Login</a>
+            <a href="index.html">Please give me account</a>
           </button>
         </form>
       </div>
