--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
       <div
         class="bg-yellow-500 rounded-3xl w-[420px] h-[490px] flex justify-center flex-col items-center"
       >
-        <form class="flex flex-col gap-5" action="accounts.html">
+        <form class="flex flex-col gap-5" action="">
           <input class="bg-white rounded-2xl" type="text" />
           <input class="bg-white rounded-2xl" type="email" required />
           <input class="bg-white rounded-2xl" type="password" required />
