--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div
         class="bg-yellow-500 rounded-3xl w-[420px] h-[490px] flex justify-center flex-col items-center"
       >
-        <form class="flex flex-col gap-5" action="accounts.html">
+        <form class="flex flex-col gap-5" action="">
           <input class="bg-white rounded-2xl" type="text" />
           <input class="bg-white rounded-2xl" type="email" required />
           <input class="bg-white rounded-2xl" type="password" required />
@@ -37,7 +37,7 @@
           <button
             class="hover:cursor-pointer bg-red-700 hover:duration-1000 hover:bg-blue-700 rounded-3xl text-white"
           >
-            <a href="main.html"></a>
+            <a href="main.html">Corfirm</a>
           </button>
           <button
             class="hover:cursor-pointer bg-red-700 hover:duration-1000 hover:bg-blue-700 rounded-3xl text-white"
