--- a/login.html
+++ b/login.html
@@ -29,6 +29,7 @@
       <div
         class="bg-yellow-500 rounded-3xl w-[420px] h-[490px] flex justify-center flex-col items-center"
       >
+        <p class="font-extrabold text-5xl text-white">LOGIN</p>
         <form class="flex flex-col gap-5" action="">
           <input class="bg-white rounded-2xl" type="text" />
           <input class="bg-white rounded-2xl" type="email" required />
