--- a/login.html
+++ b/login.html
@@ -12,41 +12,82 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Login Page</title>
+    <style>
+      p {
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+          sans-serif;
+      }
+
+      /* Loader animation */
+      .loader {
+        border: 6px solid #f3f3f3;
+        border-top: 6px solid #ef4444;
+        border-radius: 50%;
+        width: 70px;
+        height: 70px;
+        animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
   </head>
-  <style>
-    p {
-      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-        sans-serif;
-    }
-  </style>
   <body
     class="bg-yellow-300 flex justify-center flex-col items-center align-middle"
   >
+    <!-- Loader Screen -->
     <div
-      class="bg-amber-600 rounded-3xl w-[470px] h-[520px] flex justify-center flex-col items-center"
+      id="loader"
+      class="fixed inset-0 bg-yellow-300 flex flex-col justify-center items-center z-50"
     >
+      <div class="loader"></div>
+      <p class="mt-4 text-lg font-bold text-yellow-800">Loading...</p>
+    </div>
+
+    <!-- Page Content -->
+    <div id="content" class="hidden">
       <div
-        class="bg-yellow-500 rounded-3xl w-[420px] h-[490px] flex justify-center flex-col items-center"
+        class="bg-amber-600 rounded-3xl w-[470px] h-[520px] flex justify-center flex-col items-center"
       >
-        <p class="font-extrabold text-5xl text-white">LOGIN</p>
-        <form class="flex flex-col gap-5" action="">
-          <input class="bg-white rounded-2xl" type="text" />
-          <input class="bg-white rounded-2xl" type="email" required />
-          <input class="bg-white rounded-2xl" type="password" required />
-          <input class="bg-white rounded-2xl" type="password" required />
-          <button
-            class="hover:cursor-pointer bg-red-700 hover:duration-1000 hover:bg-blue-700 rounded-3xl text-white"
-          >
-            <a href="main.html">Corfirm</a>
-          </button>
-          <button
-            class="hover:cursor-pointer bg-red-700 hover:duration-1000 hover:bg-blue-700 rounded-3xl text-white"
-          >
-            <a href="index.html">Please give me account</a>
-          </button>
-        </form>
+        <div
+          class="bg-yellow-500 rounded-3xl w-[420px] h-[490px] flex justify-center flex-col items-center"
+        >
+          <p class="font-extrabold text-5xl text-white">LOGIN</p>
+          <form class="flex flex-col gap-5" action="">
+            <input class="bg-white rounded-2xl p-2" type="text" />
+            <input class="bg-white rounded-2xl p-2" type="email" required />
+            <input class="bg-white rounded-2xl p-2" type="password" required />
+            <input class="bg-white rounded-2xl p-2" type="password" required />
+            <button
+              class="hover:cursor-pointer bg-red-700 hover:duration-1000 hover:bg-blue-700 rounded-3xl text-white p-2"
+            >
+              <a href="main.html">Confirm</a>
+            </button>
+            <button
+              class="hover:cursor-pointer bg-red-700 hover:duration-1000 hover:bg-blue-700 rounded-3xl text-white p-2"
+            >
+              <a href="index.html">Please give me account</a>
+            </button>
+          </form>
+        </div>
       </div>
     </div>
+
+    <script>
+      // Show loader, then hide after 2 seconds
+      window.addEventListener("load", () => {
+        setTimeout(() => {
+          document.getElementById("loader").style.display = "none";
+          document.getElementById("content").classList.remove("hidden");
+        }, 2000); // change time if needed
+      });
+    </script>
   </body>
 </html>
