--- a/login.html
+++ b/login.html
@@ -68,7 +68,9 @@
             <button
               class="hover:cursor-pointer bg-red-700 hover:duration-1000 hover:bg-blue-700 rounded-3xl text-white p-2"
             >
-              <a href="main.html">Confirm</a>
+              <a class="relative w-full h-full" href="main.html"
+                ><p>Confirm</p></a
+              >
             </button>
             <button
               class="hover:cursor-pointer bg-red-700 hover:duration-1000 hover:bg-blue-700 rounded-3xl text-white p-2"
