--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
     <!-- Main Content -->
     <div
       id="content"
-      class="hidden bg-amber-600 rounded-3xl w-[470px] h-[520px] flex justify-center flex-col items-center"
+      class="bg-amber-600 rounded-3xl w-[470px] h-[520px] flex justify-center flex-col items-center"
     >
       <div
         class="bg-yellow-500 rounded-3xl w-[420px] h-[490px] flex justify-center flex-col items-center"
       >
         <p class="font-extrabold text-5xl text-white">REGISTER</p>
-        <form class="flex flex-col gap-5" action="">
+        <form class="flex flex-col gap-5">
           <input class="bg-white rounded-2xl p-2" type="text" />
           <input class="bg-white rounded-2xl p-2" type="email" required />
           <input class="bg-white rounded-2xl p-2" type="password" required />
