--- a/music-links/LYBMHA.html
+++ b/music-links/LYBMHA.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="./font-awesome-6.5.1-pro-full/css/all.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <audio src="Let You Break My Heart Again.mp3">File</audio>
+  <body class="bg-yellow-500">
+    <header class="text-white w-full bg-yellow-600">
+      <div class="flex justify-center">
+        <button>
+          <a href="/main.html"></a>
+          <img
+            src="/image_2025-09-07_094524211-removebg-preview.png"
+            alt="Logo.Png"
+            class="w-14 h-10 hover:w-80 hover:h-60 duration-300 hover:cursor-pointer"
+          />
+        </button>
+        </button>
+      </div>
+    </header>
+    <!--Delete From here-->
+<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A1343295664&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/laufeylin" title="laufey" target="_blank" style="color: #cccccc; text-decoration: none;">laufey</a> · <a href="https://soundcloud.com/laufeylin/let-you-break-my-heart-again" title="Let You Break My Heart Again (Live)" target="_blank" style="color: #cccccc; text-decoration: none;">Let You Break My Heart Again (Live)</a></div>
+
+    <!--The css after is important delete the before-->>
+    <div class=" space-y-5 fixed bg-yellow-200 rounded-3xl shadow-xl shadow-yellow-700" ><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkCTdgwxGaI3j-CbqcP8AwJbg3F2fMEGC2aQ&s" alt="" class="rounded-[50%] flex justify-center shadow-amber-600 shadow-xl"><button><a href="https://open.spotify.com/artist/7gW0r5CkdEUMm42w9XpyZO"><p class="text-white text-5xl bg-yellow-600 hover:bg-yellow-400 hover:opacity-50 hover:text-black hover:duration-[2.23452423232s] hover:scale-[101%] rounded-3xl h-16 w-64 text-center shadow-inner shadow-amber-600  ">Laufey</p></a></button></div>
+    <div class="bg-amber-500 p-96 flex justify-between">
+      <button class="flex w-24 h-5">
+          <a
+            href="/main.html"
+            class="px-44 py-22 text-white flex text-center text-3xl bg-green-700 hover:cursor-pointer hover:scale-150 hover:bg-blue-700 duration-300 rounded-3xl"
+            ><p>Go Back</p></a
+          >
+        </button>
+
+        </button>
+    </div>
   </body>
 </html>
