--- a/login.html
+++ b/login.html
@@ -68,9 +68,7 @@
             <button
               class="hover:cursor-pointer bg-red-700 hover:duration-1000 hover:bg-blue-700 rounded-3xl text-white p-2"
             >
-              <a class="relative w-full h-full" href="main.html"
-                ><p>Confirm</p></a
-              >
+              <a class="relative w-full h-full" href="main.html">`Confirm</a>
             </button>
             <button
               class="hover:cursor-pointer bg-red-700 hover:duration-1000 hover:bg-blue-700 rounded-3xl text-white p-2"
