--- a/Search.html
+++ b/Search.html
@@ -71,7 +71,7 @@
       <div class="inline-flex">
         <button class="flex w-24 h-5">
           <a
-            href="index.html"
+            href="main.html"
             class="w-24 h-7 bg-green-700 hover:cursor-pointer hover:scale-150 hover:bg-blue-700 duration-300"
             >Home Page</a
           >
