--- a/main.html
+++ b/main.html
@@ -72,8 +72,8 @@
         <button class="flex w-24 h-5">
           <a
             href="index.html"
-            class="w-24 h-7 bg-green-700 hover:cursor-pointer hover:scale-150 hover:bg-blue-700 duration-300"
-            >Home Page</a
+            class="w-24 h-7 bg-red-700 hover:cursor-pointer hover:scale-150 hover:bg-blue-700 duration-300"
+            >Go Back</a
           >
         </button>
         <button class="flex w-24 h-5">
