--- a/main.html
+++ b/main.html
@@ -262,8 +262,7 @@
       class="text-white w-full gap-2 py-5 bg-yellow-500 flex flex-col justify-center h-full items-center shadow-sm shadow-amber-300"
     >
       <h1>@Produced by Mai Do Tien Dat</h1>
-      <h2>School: SNAC</h2>
-      <h2>Date of Birth: 17/04/2012</h2>
+      <a>maidotiendat@gmail.com</a>
     </footer>
 
     <!-- JS to hide loader -->
